--- a/Website/appsettings.json
+++ b/Website/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-D3AK0UJ\\SQLEXPRESS;Database=Story;TrustServerCertificate=True;Trusted_Connection=True;"
+  }
 }
