--- a/.gitignore
+++ b/.gitignore
@@ -8,8 +8,19 @@
 /Admin/bin/Debug/net8.0
 /Admin/obj
 /Admin/Properties
+/Admin/appsettings.Development.json
+/Admin/appsettings.json
+/Admin/Program.cs
+/Admin/Website.csproj
+/Admin/Website.cspro.user
+
 /.vs/ProjectEvaluation
 /Website/obj
 /Admin/wwwroot/lib
 /Website/bin/Debug/net8.0
 /Website/wwwroot/lib
+/Website/appsettings.Development.json
+/Website/appsettings.json
+/Website/Program.cs
+/Website/Website.csproj
+/Website/Website.cspro.user
