--- a/Admin/Admin.csproj
+++ b/Admin/Admin.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="EFRepo.EntityFramework.Core" Version="1.3.2" />
     <PackageReference Include="Microsoft.Office.Interop.Excel" Version="15.0.4795.1001" />
+    <PackageReference Include="Microsoft.Office.Interop.Word" Version="15.0.4797.1004" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
