--- a/Admin/appsettings.json
+++ b/Admin/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-D3AK0UJ\\SQLEXPRESS;Database=Story;TrustServerCertificate=True;Trusted_Connection=True;"
+    //"DefaultConnection": "Server=DESKTOP-D3AK0UJ\\SQLEXPRESS;Database=Story;TrustServerCertificate=True;Trusted_Connection=True;"
+    "DefaultConnection": "Server=RG2DEV2828\\SQLEXPRESS;Database=Story;User Id=sa;Password=Thuan123@;TrustServerCertificate=True;"
   }
 }
