Chapter save Image to Local

--- a/Admin/appsettings.json
+++ b/Admin/appsettings.json
@@ -9,5 +9,10 @@
   "ConnectionStrings": {
     //"DefaultConnection": "Server=DESKTOP-D3AK0UJ\\SQLEXPRESS;Database=Story;TrustServerCertificate=True;Trusted_Connection=True;"
     "DefaultConnection": "Server=RG2DEV2828\\SQLEXPRESS;Database=Story_Management;User Id=sa;Password=Thuan123@;TrustServerCertificate=True;"
+  },
+  "SaveImage": {
+    "Avatar": "",
+    "Chapter": "D:\\StoryImages",
+    "ChapterRequestPath": "/StoryImages"
   }
 }
