--- a/Admin/appsettings.json
+++ b/Admin/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-D3AK0UJ\\SQLEXPRESS;Database=Story;TrustServerCertificate=True;Trusted_Connection=True;"
+    "DefaultConnection": "Server=DESKTOP-O4Q604J\\SQLEXPRESS;Database=Story;TrustServerCertificate=True;Trusted_Connection=True;"
   }
 }
