--- a/Admin/appsettings.json
+++ b/Admin/appsettings.json
@@ -7,12 +7,12 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    //"DefaultConnection": "Server=DESKTOP-D3AK0UJ\\SQLEXPRESS;Database=Story;TrustServerCertificate=True;Trusted_Connection=True;"
-    "DefaultConnection": "Server=RG2DEV2828\\SQLEXPRESS;Database=Story_Management;User Id=sa;Password=Thuan123@;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=DESKTOP-O4Q604J\\SQLEXPRESS;Database=Story_Management;TrustServerCertificate=True;Trusted_Connection=True;"
+    //"DefaultConnection": "Server=RG2DEV2828\\SQLEXPRESS;Database=Story_Management;User Id=sa;Password=Thuan123@;TrustServerCertificate=True;"
   },
   "SaveImage": {
     "Avatar": "",
-    "Chapter": "D:\\StoryImages",
-    "ChapterRequestPath": "/StoryImages"
+    "Chapter": "E:\\Code\\StoryImages",
+    "ChapterRequestPath": "Code/StoryImages"
   }
 }
