--- a/Admin/appsettings.json
+++ b/Admin/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    //"DefaultConnection": "Server=DESKTOP-O4Q604J\\SQLEXPRESS;Database=Story_Management;TrustServerCertificate=True;Trusted_Connection=True;"
-    "DefaultConnection": "Server=RG2DEV2828\\SQLEXPRESS;Database=Story_Management;User Id=sa;Password=Thuan123@;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=DESKTOP-O4Q604J\\SQLEXPRESS;Database=Story_Management;TrustServerCertificate=True;Trusted_Connection=True;"
+    //"DefaultConnection": "Server=RG2DEV2828\\SQLEXPRESS;Database=Story_Management;User Id=sa;Password=Thuan123@;TrustServerCertificate=True;"
   }
 }
